tests/react_modules/react_modules.exp
Error --------------------------------------------------------------------------------- es6class-types-callsite.js:18:10

Cannot create `Hello` element because property `name` is missing in props [1] but exists in `Props` [2]. [prop-missing]

   es6class-types-callsite.js:18:10
   18|         <Hello />
                ^^^^^

References:
   es6class-types-callsite.js:18:9
   18|         <Hello />
               ^^^^^^^^^ [1]
   es6class-types-module.js:7:37
    7| class Hello extends React.Component<Props> {
                                           ^^^^^ [2]


Error --------------------------------------------------------------------------------- es6class-types-callsite.js:19:10

Cannot create `HelloLocal` element because property `name` is missing in props [1] but exists in `Props` [2].
[prop-missing]

   es6class-types-callsite.js:19:10
   19|         <HelloLocal />
                ^^^^^^^^^^

References:
   es6class-types-callsite.js:19:9
   19|         <HelloLocal />
               ^^^^^^^^^^^^^^ [1]
   es6class-types-callsite.js:8:42
    8| class HelloLocal extends React.Component<Props> {
                                                ^^^^^ [2]



Found 2 errors
